syntax = "proto3";

package devicecontrol;

service DeviceControl {
  rpc SetPower(SetPowerRequest) returns (SetPowerReply);
  rpc GetStatus(GetStatusRequest) returns (GetStatusReply);
}

message SetPowerRequest {
  string device_id = 1;  
  string ip = 2;         
  string account_email = 4;  
  string account_password = 5; // → 本番は渡さずトークン化推奨
}

message SetPowerReply {
  bool success = 1;
  string message = 2;
  bool is_on = 3;
}

message GetStatusRequest {  
  string device_id = 1;
  string ip = 2;
  string account_email = 3;
  string account_password = 4;
}

message GetStatusReply {
  bool success = 1;
  string message = 2;
  bool is_on = 3;
}
